thirdparty/istio/gateway-internal.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: istio-ingress
spec:
  selector:
    app: istio-ingress-internal
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.example.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.example.com"
      tls:
        mode: SIMPLE
        credentialName: example-wildcard-secret
