thirdparty/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ingress-external
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingress-external
  action: ALLOW
  rules:
    - from:
        - source:
            remoteIpBlocks:
              - "172.16.2.0/24" # gke nodes
              - "10.220.0.0/14" # gke pods
      to:
        - operation:
            hosts:
              - "www.example.com"
    # allow all
    - from:
        - source:
            remoteIpBlocks:
              - "0.0.0.0/0"
      to:
        - operation:
            hosts:
              - "websocket.example.com"
